pi-elef/css/style.css
html{
min-height: 100%;
background: #4D444F;
padding: 0px;
/* background-image: linear-gradient(-180deg, #171319 0%, #40353E 100%); */
/* Rectangle 5: */
background-image: linear-gradient(-180deg, #FFFFFF 0%, #FFFFFF 100%);

}

canvas {
  width:100%;
  height:100%;
  position: fixed;
  top: 0;
  left: 0;
  /* z-index: -10; */
}

::selection{
  background-color: #E6A62D;
  color: #202225;
}

::-moz-selection{
  background-color: #E6A62D;
  color: #202225;
}

body {
    margin: 0px;
    font-family: 'Rubik', sans-serif;
    color: #2B3237;
    text-align: center;
    padding-bottom: 10px;
}

svg, svg g{
  max-width: 90px;
  max-height: 50px;
  transition: 0.4s all;
  opacity: 0.5;
}

svg:hover{
  opacity: 1;
}

.intro{
  position: relative;
  margin: 0 auto;
  margin-top: 60px;
  margin-bottom: 100px;
  text-align: center;
  max-width: 700px;
  z-index: 100;
}

.intro span{
  opacity: 0.7;
  font-size: 30px;
  letter-spacing: 0.9em;
  padding-left: 0.9em;
  color: #E87D5F;
}

.intro h1{
  line-height: 78px;
  margin-bottom: 15px;
  font-size: 30px;
  /* background: -webkit-linear-gradient(left, #E4C603 , yellow); */
  /* background: linear-gradient(-197deg, #EF07F3 0%, #E4C603 100%); */
  background-image: linear-gradient(-270deg, #63DCAE 0%, #8B99DE 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

hr{
  margin-top: 45px;
  margin-bottom: 30px;
  border: none;
  height: 1px;
  color: rgba(255,255,255,0.4); /* old IE */
  background-color: rgba(255,255,255,0.4);
  opacity: 0.3;
  max-width: 700px;
}

.header{
  margin: 0 auto;
  padding-top: 43px;
  text-align: left;
  width: 100%;
  z-index: 100;
/* background-image: linear-gradient(-180deg, #131517 0%, rgba(18,21,23,0.00) 100%); */
height: 100px;
position: relative;
}

.header .logo{
  opacity: 0.4;
  transition: 0.5s all;
  margin-left: 32px;
}

.header .logo:hover{
  opacity: 0.7;
}

a{
  color: #2B3237;
  transition: 0.4s all;
}

a:hover{
  color: #EA5E86;
}

button{
  margin-top: 50px;
  background: none;
  border: 2px solid #2B3237;
  border-radius: 100px;
  transition: 0.4s all;
  color: #2B3237;
  padding: 10px 25px;
  cursor: pointer;
}

button:hover{
  color: #EF0DED;
  border: 2px solid #EF0DED;
}


.header .logo{
  display: inline;
  height: 50px;
}

.header .navigation{
  display: inline;
  float: right;
  margin-top: 10px;
  margin-right: 30px;
}

.headline{
  padding-left: 20px;
  padding-right: 20px;
}

h1{
  font-family: 'Rubik', serif;
  font-size: 82px;
  font-weight: 700;
  line-height: 88px;
}

h1 span{
  color: #E87D5F;
}

.description{
  margin: 0 auto;
  font-size: 18px;
  max-width: 600px;
  line-height: 25px;
  margin-top: 50px;
}

.footerwrapper{
  margin-bottom: 0px;
  padding-bottom:30px;
  z-index: 100;
  position: relative;
}

.footer a, .description a{
  color: #2B3237;
}

.footer a:hover, .description a:hover{
  color: #EA5E86;
}

.footer{
  margin-top: 50px;
}

@media (max-width: 1200px){
  h1{
    font-size: 38px;
    line-height: 58px;
  }
  p{
      font-size: 14px;
      line-height: 25px;
  }
}

@media (max-width: 1030px){
  .item{
    width: 100%;
    text-align: center;
    height: auto;
    max-height: none;
    padding-top: 30px;
    padding-bottom: 30px;
  }

  .item:nth-child(1){
    margin-top: 0;
  }

  .linkOfItem:nth-child(even){
    margin-left: 0;
  }
}


@media (max-width: 600px){

  .header .logo{
    margin-left: 15px;
  }

  .intro{
    margin-top: 4px;
    margin-bottom: 0;
  }

  .intro h1{
    font-size: 50px;
    letter-spacing: 0px;
    line-height: 45px;
  }

  .intro span{
    font-size: 14px;
  }

  .description p{
    font-size: 13px;
    line-height: 28px;
    margin-top: 30px;
    padding: 40px 40px;
  }

  .list{
    margin-top: 40px;
  }

  .item:nth-child(1n+3){
    margin-top: 30px;
}

  .header{
    padding-top: 20px;
  }
  h1{
    font-size: 25px;
    line-height: 40px;
  }
  p{
      font-size: 14px;
      line-height: 24px;
  }
}

